<resources>
    <string name="app_name">WifiCar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Controller</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>

    <string name ="broker_text">MQTT Host:</string>
    <string name ="broker_hint">tcp://test.mosquitto.org:1883</string>
    <string name="username_text">Username:</string>
    <string name="username_hint">username</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">password</string>
    <string name="subscribe_topic_text">Subscribe Topic:</string>
    <string name="subscribe_topic_hint">wificar/status</string>
    <string name="publish_topic_text">Publish Topic:</string>
    <string name="publish_topic_hint">wificar/control</string>
    <string name="status_text">Disconnected</string>
    <string name="status_text2">Broker:</string>
    <string name="status_text3">Robot:</string>
    <string name="speed_motor_a2">Speed Motor A (%):</string>
    <string name="speed_motor_b2">Speed Motor B (%):</string>
/>
</resources>
