<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundapp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cameraIp_TextView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Camera URL:"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/username_editText"
            app:layout_constraintTop_toBottomOf="@+id/speedMotorA_textView" />

        <TextView
            android:id="@+id/cameraIp_TextView4"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Camera Subscribe Topic:"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/username_editText"
            app:layout_constraintTop_toBottomOf="@+id/cameraIp_TextView5" />

        <TextView
            android:id="@+id/cameraIp_TextView5"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Camera Publish Topic:"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/password_editText"
            app:layout_constraintTop_toBottomOf="@+id/cameraIp_TextView" />

        <EditText
            android:id="@+id/cameraIp_EditText"
            android:layout_width="175dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="http://192.168.15.102:8081"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/cameraIp_TextView"
            app:layout_constraintTop_toBottomOf="@+id/speedMotorA_textView" />

        <TextView
            android:id="@+id/host_textView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/broker_text"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/host_editText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/broker_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/host_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cameraPublishTopic_EditText"
            android:layout_width="175dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="wificar/cam/control"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/cameraIp_TextView5"
            app:layout_constraintTop_toBottomOf="@+id/cameraIp_EditText" />

        <EditText
            android:id="@+id/cameraSubscribeTopic_EditText"
            android:layout_width="175dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="wificar/cam/status"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/cameraIp_TextView4"
            app:layout_constraintTop_toBottomOf="@+id/cameraPublishTopic_EditText" />

        <EditText
            android:id="@+id/subscriber_editText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/publish_topic_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/subscribe_textView"
            app:layout_constraintTop_toBottomOf="@+id/publisher_editText" />

        <EditText
            android:id="@+id/publisher_editText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/subscribe_topic_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/publish_textView"
            app:layout_constraintTop_toBottomOf="@+id/password_editText" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/password_textView"
            app:layout_constraintTop_toBottomOf="@+id/username_editText" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/username_textView"
            app:layout_constraintTop_toBottomOf="@+id/host_editText" />

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/username_text"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_textView" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/password_text"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_textView" />

        <TextView
            android:id="@+id/publish_textView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/publish_topic_text"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textView" />

        <TextView
            android:id="@+id/subscribe_textView"
            android:layout_width="95dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:autoText="false"
            android:gravity="center"
            android:text="@string/subscribe_topic_text"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publish_textView" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="128dp"
            android:layout_height="68dp"
            android:layout_marginStart="172dp"
            android:layout_marginTop="16dp"
            android:background="@mipmap/savebutton"
            android:imeOptions="actionDone"
            android:scaleType="fitCenter"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/subscriber_editText"
            app:layout_constraintTop_toBottomOf="@+id/cameraSubscribeTopic_EditText" />

        <TextView
            android:id="@+id/speedMotorA_textView"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/speed_motor_a2"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/host_editText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/speedMotorA_editText"
            android:layout_width="38dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="100"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:text="100"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/speedMotorA_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/speedMotorB_editText"
            android:layout_width="38dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="100"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textColor="@color/settings"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/speedMotorB_textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="100" />

        <TextView
            android:id="@+id/speedMotorB_textView"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/speed_motor_b2"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/speedMotorA_editText"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>