<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgroundapp">

    <TextView
        android:id="@+id/status_textView4"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/status_text"
        android:textColor="#fc0e0a"
        app:layout_constraintStart_toEndOf="@+id/status_textView3"
        app:layout_constraintTop_toBottomOf="@+id/status_textView" />

    <TextView
        android:id="@+id/status_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/status_text3"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_textView2" />

    <TextView
        android:id="@+id/battery_textView2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="8dp"
        android:text="Battery:"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/battery_textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="\?\?"
        android:textColor="#767A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/battery_textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/obstacle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\?\?"
        android:textColor="#767A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toEndOf="@+id/obstacle_textView2"
        app:layout_constraintTop_toBottomOf="@+id/battery_textView" />

    <TextView
        android:id="@+id/obstacle_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:text="Obstacle:"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battery_textView" />

    <TextView
        android:id="@+id/distance_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\?\?"
        android:textColor="#767A80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toEndOf="@+id/distance_textView2"
        app:layout_constraintTop_toBottomOf="@+id/obstacle_textView" />

    <TextView
        android:id="@+id/distance_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:text="Distance:"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obstacle_textView" />

    <TextView
        android:id="@+id/status_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/status_text2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/status_text"
        android:textColor="#fc0e0a"
        app:layout_constraintStart_toEndOf="@+id/status_textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickViewDirection"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:layout_marginTop="88dp"
        app:JV_backgroundColor="@color/colorPrimaryDark"
        app:JV_borderColor="@color/colorPrimary"
        app:JV_borderWidth="5dp"
        app:JV_buttonColor="@color/colorPrimary"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/accelerateButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        android:background="@mipmap/acceleratebutton"
        android:scaleType="fitCenter"
        android:text="ACCELERATE"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/brakeButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/brakeButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/brakebutton"
        android:scaleType="fitCenter"
        android:text="BRAKE"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>